deployment/dev/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkinsx-test-dev
  labels:
    app: jenkinsx-test-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkinsx-test-dev
  template:
    metadata:
      labels:
        app: jenkinsx-test-dev
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - jenkinsx-test-dev
            topologyKey: "kubernetes.io/hostname"
      containers:
      - env:
        - name: JAVA_OPTS
          value: "-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1"
        image: docker.io/insclixtest/jenkinsx-test:dev
        imagePullPolicy: Always
        name: jenkinsx-test-dev
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "4096Mi"
          limits:
            memory: "4096Mi"
      restartPolicy: Always
      nodeSelector:
        cloud.google.com/gke-nodepool: default-pool
      imagePullSecrets:
      - name: randymay-registry-key
