deployment/dev/basic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: jenkinsx-test
spec:
  backend:
    serviceName: jenkinsx-test-dev
    servicePort: 8080
